--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "vue-sheet",
-  "private": true,
+  "name": "vue3-sheet",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -9,20 +8,30 @@
     "lint": "eslint \"{src,presets}/**/*.{vue,ts,tsx}\" --fix"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
+    "tailwindcss": "^3.1.5",
+    "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^2.9.14",
+    "vite-plugin-inspect": "^0.5.1",
     "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.17"
   }
 }
