--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vue3-sheet",
   "version": "0.0.0",
+  "description": "Office Excel like Vue Sheet",
+  "author": "westhide",
+  "homepage": "www.tibetourism.work:4173/login",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -15,6 +18,7 @@
     "@types/node": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "autoprefixer": "^10.4.7",
@@ -27,12 +31,23 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
+    "terser": "^5.14.2",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.9.3",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.14",
+    "vite-plugin-banner": "^0.3.0",
+    "vite-plugin-chunk-split": "^0.2.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-inspect": "^0.5.1",
+    "vite-plugin-pages": "^0.25.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
     "vue-eslint-parser": "^9.0.3",
+    "vue-router": "^4.1.2",
     "vue-tsc": "^0.34.17"
+  },
+  "resolutions": {
+    "bin-wrapper": "npm:bin-wrapper-china"
   }
 }
