--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/types": "^17.0.0",
+    "@iconify/json": "^2.1.78",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -65,6 +66,7 @@
     "terser": "^5.14.2",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.9.3",
+    "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.14",
     "vite-plugin-banner": "^0.3.0",
