--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint \"{src,presets}/**/*.{vue,ts,tsx}\" --fix",
+    "lint": "eslint \"{src,presets}/**/*.{vue,ts,tsx,html}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
     "lint-staged": "lint-staged",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx,vue}": [
       "eslint --fix",
       "prettier --write"
     ],
@@ -23,11 +25,8 @@
     "package.json": [
       "prettier --write"
     ],
-    "*.vue": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{scss,less,styl,html}": [
+    "*.{vue,scss,less,css,styl,html}": [
+      "stylelint --fix",
       "prettier --write"
     ],
     "*.md": [
@@ -42,6 +41,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/types": "^17.0.0",
     "@iconify/json": "^2.1.78",
+    "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -49,7 +49,12 @@
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vitest/ui": "^0.18.0",
+    "@vueuse/core": "^8.9.3",
+    "@vueuse/integrations": "^8.9.3",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "change-case": "^4.1.2",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -57,14 +62,26 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
     "husky": "^8.0.0",
+    "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.16",
     "postcss": "^8.4.14",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-order": "^5.0.0",
     "tailwindcss": "^3.1.6",
     "terser": "^5.14.2",
     "typescript": "^4.7.4",
+    "universal-cookie": "^4.0.4",
     "unplugin-auto-import": "^0.9.3",
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.1",
@@ -76,7 +93,9 @@
     "vite-plugin-inspect": "^0.5.1",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-vue-layouts": "^0.6.0",
+    "vitest": "^0.18.0",
     "vue-eslint-parser": "^9.0.3",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.2",
     "vue-tsc": "^0.34.17"
   },
