--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint \"{src,presets}/**/*.{vue,ts,tsx,html}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
     "lint-staged": "lint-staged",
     "test": "vitest",
+    "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "webstorm-integration": "vitest --watch --reporter=dot --reporter=json --outputFile=.vitest-result.json",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -57,6 +59,7 @@
     "axios": "^0.27.2",
     "c8": "^7.11.3",
     "change-case": "^4.1.2",
+    "cypress": "^10.3.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
