--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitest/ui": "^0.18.0",
+    "@vue/test-utils": "2.0.0-rc.18",
     "@vueuse/core": "^8.9.3",
     "@vueuse/integrations": "^8.9.3",
     "autoprefixer": "^10.4.7",
@@ -70,6 +71,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
     "husky": "^8.0.0",
+    "jsdom": "^20.0.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
