--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check": "vue-tsc --noEmit",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "report": "set report=true && vite build",
     "lint": "eslint \"{src,cypress}/**/*.{vue,ts,tsx,json}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
     "lint-staged": "lint-staged",
     "test": "vitest",
@@ -74,7 +75,7 @@
     "jsdom": "^20.0.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.16",
@@ -82,6 +83,8 @@
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "prettier": "^2.7.1",
+    "rollup": "^2.77.0",
+    "rollup-plugin-visualizer": "^5.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^8.0.0",
