--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-legacy": "^2.0.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "@vitest/ui": "^0.18.0",
-    "@vue/test-utils": "2.0.0-rc.18",
+    "@vue/test-utils": "^2.0.2",
     "@vueuse/core": "^8.9.3",
     "@vueuse/integrations": "^8.9.3",
     "autoprefixer": "^10.4.7",
@@ -98,15 +98,15 @@
     "unplugin-auto-import": "^0.9.3",
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^2.9.14",
+    "vite": "^3.0.0",
     "vite-plugin-banner": "^0.3.0",
     "vite-plugin-chunk-split": "^0.2.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-inspect": "^0.5.1",
+    "vite-plugin-inspect": "^0.6.0",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.18.0",
+    "vitest": "^0.18.1",
     "vue-eslint-parser": "^9.0.3",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.2",
