style(nprogess): css nesting

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "vue-tsc --noEmit",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "report": "set report=true && vite build",
+    "report": "cross-env report=true vite build",
     "lint": "eslint \"{src,cypress}/**/*.{vue,ts,tsx,json}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
     "lint-staged": "lint-staged",
     "test": "vitest",
@@ -64,6 +64,7 @@
     "axios": "^0.27.2",
     "c8": "^7.11.3",
     "change-case": "^4.1.2",
+    "cross-env": "^7.0.3",
     "cypress": "^10.3.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
