--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:cypress": "npx cypress open",
+    "benchmark": "ts-node benchmark",
     "webstorm-integration": "vitest --watch --reporter=dot --reporter=json --outputFile=.vitest-result.json",
     "prepare": "husky install"
   },
@@ -62,6 +63,7 @@
     "@vueuse/integrations": "^8.9.3",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "benny": "^3.7.1",
     "c8": "^7.11.3",
     "change-case": "^4.1.2",
     "cross-env": "^7.0.3",
@@ -94,6 +96,7 @@
     "stylelint-order": "^5.0.0",
     "tailwindcss": "^3.1.6",
     "terser": "^5.14.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "universal-cookie": "^4.0.4",
     "unplugin-auto-import": "^0.9.3",
