ci(wasm): wasm-rs

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "check": "vue-tsc --noEmit",
     "build": "vue-tsc --noEmit && vite build",
+    "build:wasm": "wasm-pack build ./wasm-rs --target web",
     "preview": "vite preview",
     "report": "cross-env report=true vite build",
     "lint": "eslint \"{src,cypress}/**/*.{vue,ts,tsx,json}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
@@ -41,7 +42,8 @@
     ]
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "wasm-rs": "file:wasm-rs/pkg"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -110,6 +112,7 @@
     "vite-plugin-inspect": "^0.6.0",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-wasm": "^1.0.1",
     "vitest": "^0.18.1",
     "vue-eslint-parser": "^9.0.3",
     "vue-i18n": "^9.1.10",
