--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "check": "vue-tsc --noEmit && pnpm check:wasm",
     "check:wasm": "cargo check --manifest-path ./wasm-rs/Cargo.toml",
-    "build:": "pnpm build:wasm && pnpm check && vite build",
+    "build": "pnpm build:wasm && pnpm check && vite build",
     "build:wasm": "wasm-pack build ./wasm-rs --target web",
     "preview": "vite preview",
     "lint": "eslint \"{src,cypress}/**/*.{vue,ts,tsx,json}\" --fix && stylelint \"**/*.{vue,less,postcss,css,scss}\" --fix",
@@ -51,7 +51,7 @@
     "@iconify/json": "^2.1.78",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/unplugin-vue-i18n": "^0.4.0",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -69,6 +69,7 @@
     "change-case": "^4.1.2",
     "cross-env": "^7.0.3",
     "cypress": "^10.3.0",
+    "dayjs": "^1.11.3",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -89,6 +90,7 @@
     "prettier": "^2.7.1",
     "rollup": "^2.77.0",
     "rollup-plugin-visualizer": "^5.7.1",
+    "rxjs": "^7.5.6",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^8.0.0",
