--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:cypress": "npx cypress open",
+    "test:wasm": "wasm-pack test --chrome ./wasm-rs",
     "benchmark": "ts-node benchmark",
     "webstorm-integration": "vitest --watch --reporter=dot --reporter=json --outputFile=.vitest-result.json",
     "prepare": "husky install"
@@ -42,7 +43,6 @@
     ]
   },
   "dependencies": {
-    "html2canvas": "^1.4.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -77,6 +77,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
+    "html2canvas": "^1.4.1",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
     "less": "^4.1.3",
